tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__NotQuiteFerromag-AAAAAAAAAAAAAAAAAAAMCQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3081,
  "prerequisites": [
    3080
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...But it's enough to separate with the magnetic separator.\n\nNow you can get both Europium III Oxide and some of the rarer rare earths.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lNot Quite Ferromagnetic...",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3080
  ],
  "rewards": [],
  "tasks": []
}
