tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__NowforNitration-AAAAAAAAAAAAAAAAAAAL7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3054,
  "prerequisites": [
    3053
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For the next step you'll need ammonium nitrate (again with the nitric acid!) and your diluted monazite sulfate.\nYou'll need to do this in an LCR.\n\nThe resulting fluid simply vanishes into the void. Best not to worry about it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lNow for Nitration",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3053
  ],
  "rewards": [],
  "tasks": []
}
