tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__OnYourWaytoTier4-AAAAAAAAAAAAAAAAAAAGsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1715,
  "prerequisites": [
    1412,
    1533
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tier 4 Planets are Jupiter's Moon Io where you will find the next dungeon, Venus (needs a SpaceSuit) and Mercury.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lOn Your Way to Tier 4 DIMs",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1412,
    1533
  ],
  "rewards": [],
  "tasks": []
}
