tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Osmiridium-AAAAAAAAAAAAAAAAAAAJGw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2331,
  "prerequisites": [
    2321,
    2317
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Osmiridium is a quite expensive alloy. You'll need it to make Pure Tears to get rid of your Warp if you've been doing Thaumcraft. It's also used in the ZPM emitter and sensor.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lOsmiridium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2321,
    2317
  ],
  "rewards": [],
  "tasks": []
}
