tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__OxalicAcid-AAAAAAAAAAAAAAAAAAAL_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3068,
  "prerequisites": [
    3066
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Oxalic Acid is really only useful for cerium processing. Go ahead and make a bit.\n\nThere are a couple options for this so just look through NEI and pick whichever is most suitable for you.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lOxalic Acid",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3066
  ],
  "rewards": [],
  "tasks": []
}
