tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__Palladium-AAAAAAAAAAAAAAAAAAALPg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2878,
  "prerequisites": [
    2309,
    2310
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Lastly, add Formic Acid to Reprecipitated Palladium to get pure Palladium, along with other stuff you can reuse.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lPalladium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2309,
    2310
  ],
  "rewards": [],
  "tasks": []
}
